# object_classification_package

./: .gitignore  LICENSE  README.md  pyproject.toml
my_package/: README.md
my_package/src/my_package/: api.py  class_mapping.json  model.py  predict.py  streamlit_app.py  train.py  transforms.py
